[workspace]
members = [
    "accounts-cluster-bench",
    "bench-exchange",
    "bench-streamer",
    "bench-tps",
    "accounts-bench",
    "banking-bench",
    "banks-client",
    "banks-interface",
    "banks-server",
    "clap-utils",
    "cli-config",
    "cli-output",
    "client",
    "core",
    "dos",
    "download-utils",
    "faucet",
    "frozen-abi",
    "perf",
    "validator",
    "genesis",
    "genesis-utils",
    "gossip",
    "install",
    "keygen",
    "ledger",
    "ledger-tool",
    "local-cluster",
    "logger",
    "log-analyzer",
    "merkle-root-bench",
    "merkle-tree",
    "storage-bigtable",
    "storage-proto",
    "streamer",
    "measure",
    "metrics",
    "net-shaper",
    "notifier",
    "poh",
    "poh-bench",
    "program-test",
    "programs/bpf_loader",
    "programs/config",
    "programs/exchange",
    "programs/secp256k1",
    "programs/stake",
    "programs/vote",
    "remote-wallet",
    "rpc",
    "runtime",
    "runtime/store-tool",
    "sdk",
    "sdk/cargo-build-bpf",
    "sdk/cargo-test-bpf",
    "scripts",
    "stake-accounts",
    "sys-tuner",
    "tokens",
    "transaction-status",
    "account-decoder",
    "upload-perf",
    "net-utils",
    "version",
    "cli",
    "rayon-threadlimit",
    "watchtower",
]

exclude = [
    "programs/bpf",
]

# TODO: Remove once the "simd-accel" feature from the reed-solomon-erasure
# dependency is supported on Apple M1. v2 of the feature resolver is needed to
# specify arch-specific features.
resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"

[patch.crates-io]
jsonrpc-core = { git = "https://github.com/ckamm/jsonrpc", rev = "67df4440a9e110b02df544d39bde9c3dc677c0e3" }
jsonrpc-derive = { git = "https://github.com/ckamm/jsonrpc", rev = "67df4440a9e110b02df544d39bde9c3dc677c0e3" }
jsonrpc-http-server = { git = "https://github.com/ckamm/jsonrpc", rev = "67df4440a9e110b02df544d39bde9c3dc677c0e3" }
jsonrpc-pubsub = { git = "https://github.com/ckamm/jsonrpc", rev = "67df4440a9e110b02df544d39bde9c3dc677c0e3" }
jsonrpc-core-client = { git = "https://github.com/ckamm/jsonrpc", rev = "67df4440a9e110b02df544d39bde9c3dc677c0e3" }
